fixed overflowing off the display

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body{
 .calculator{
     display: grid;
     grid-template: 1fr 1fr 1fr 1fr 1fr 1fr / 1fr 1fr 1fr 1fr;
-    max-width: 300px;
+    max-width: 250px;
     height: 400px;
     border: 3px solid black;
     padding: 16px;
@@ -29,6 +29,7 @@ body{
     justify-content: flex-end;
 
     height: 64px;
+    overflow: hidden;
 
 }
 
